--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@better-scroll/core": "^2.1.1",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "swiper": "^5.4.5",
@@ -15,6 +16,7 @@
     "vue-awesome-swiper": "^4.1.1",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
+    "vue-sweetalert2": "^4.1.1",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
