--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "swiper": "^5.4.5",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
+    "vue-cookies": "^1.7.4",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
-    "vue-sweetalert2": "^4.1.1",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
